--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1928,3 +1928,7 @@ msgstr ""
 msgctxt "#40291"
 msgid "Set number of items to display on widgets."
 msgstr ""
+
+msgctxt "#40292"
+msgid "votes"
+msgstr ""
