--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -3,6 +3,7 @@
 • Add possibility to disable pattern
 • Add duration flag icon for widgets
 • Add first aired date on dialog video info
+• Add disc to home menu
 • Fix animated posters issue
 • Fix duration flag icon
 • Minnor fix
