--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -1,3 +1,6 @@
+1.7.4 :
+• Minnor fix
+
 1.7.3 :
 • Add possibility to choose number of items to display on widgets
 • Add possibility to disable pattern
