• Add support for postplay screen from Nextup Service Notification addon • Bump xbmc.gui to 5.13.0

--- a/skin.estuary.mod.kodi18/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod.kodi18/language/resource.language.fr_fr/strings.po
@@ -1803,3 +1803,7 @@ msgstr "votes"
 msgctxt "#40293"
 msgid "Eject"
 msgstr "Éjecter"
+
+msgctxt "#40294"
+msgid "Hide Spoilers"
+msgstr "Masquer Spoilers"
