--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -1,5 +1,7 @@
 1.7.4 :
+• Add support for postplay screen from Nextup Service Notification addon
 • Add pattern to extended info windows
+• Bump xbmc.gui to 5.13.0
 • Fix missing changes for new Skin Helper Service addons
 • Fix clearlogos aspect ratio for TV Shows widgets
 • Fix rss on widgets focus
