--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,4 +1,5 @@
 1.7.4 :
+• Add support for postplay screen from Nextup Service Notification addon
 • Add pattern to extended info windows
 • Fix missing changes for new Skin Helper Service addons
 • Fix clearlogos aspect ratio for TV Shows widgets
