--- a/skin.estuary.mod.kodi18/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod.kodi18/language/resource.language.de_de/strings.po
@@ -1800,3 +1800,7 @@ msgstr "Stimmen"
 msgctxt "#40293"
 msgid "Eject"
 msgstr "Auswerfen"
+
+msgctxt "#40294"
+msgid "Hide Spoilers"
+msgstr "Verstecke Spoiler"
