--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,6 @@
+1.7.5 :
+• Fix overlapping rating with TV Shows
+
 1.7.4 :
 • Add support for postplay screen from Nextup Service Notification addon
 • Add pattern to extended info windows
