• Add changes for new Skin Shortcuts addon • Workaround for fanarts on video/music info dialog

--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -1,4 +1,6 @@
 1.7.5 :
+• Add changes for new Skin Shortcuts addon
+• Workaround for fanarts on video/music info dialog
 • Changes on scrollbars
 • Fix overlapping rating with TV Shows
 • Minnor fix
