--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,4 +1,5 @@
 1.7.5 :
+• Workaround for fanarts on video/music info dialog
 • Changes on scrollbars
 • Fix overlapping rating with TV Shows
 • Minnor fix
