• Fix build version on settings widget

--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -1,6 +1,7 @@
 1.7.6 :
 • Add fullscreen window direct channel number input for PVR
 • Justify all plots
+• Fix build version on settings widget
 
 1.7.5 :
 • Add changes for new Skin Shortcuts addon
