--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -728,63 +728,20 @@ msgstr ""
 
 #: /xml/SkinSettings.xml
 msgctxt "#40005"
-msgid "Show 'Movies' item"
+msgid "Item"
 msgstr ""
 
 #: /xml/SkinSettings.xml
 msgctxt "#40006"
-msgid "Show 'TV shows' item"
+msgid "Reset display of menu items"
 msgstr ""
 
 #: /xml/SkinSettings.xml
 msgctxt "#40007"
-msgid "Show 'Music' item"
+msgid "Are you sure you want to reset display of all menu items back to default ?"
 msgstr ""
 
-#: /xml/SkinSettings.xml
-msgctxt "#40008"
-msgid "Show 'Music videos' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40009"
-msgid "Show 'TV' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40010"
-msgid "Show 'Radio' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40011"
-msgid "Show 'Add-ons' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40012"
-msgid "Show 'Pictures' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40013"
-msgid "Show 'Videos' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40014"
-msgid "Show 'Games' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40015"
-msgid "Show 'Favourites' item"
-msgstr ""
-
-#: /xml/SkinSettings.xml
-msgctxt "#40016"
-msgid "Show 'Weather' item"
-msgstr ""
+#: Empty strings 40008 to 40016
 
 #: /xml/SkinSettings.xml
 msgctxt "#40017"
