--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -726,65 +726,22 @@ msgctxt "#40004"
 msgid "Hide main menu when selecting widgets"
 msgstr "Masquer le menu principal lors de la sélection des widgets"
 
-#: /xml/SkinSettings.xml
+#: /xml/Custom_1131_SettingsHomeMenu.xml
 msgctxt "#40005"
-msgid "Show 'Movies' item"
-msgstr "Afficher l'élément 'Films'"
+msgid "Item"
+msgstr "Elément"
 
 #: /xml/SkinSettings.xml
 msgctxt "#40006"
-msgid "Show 'TV shows' item"
-msgstr "Afficher l'élément 'Séries TV'"
+msgid "Reset display of menu items"
+msgstr "Réinitialiser l'affichage des éléments du menu"
 
 #: /xml/SkinSettings.xml
 msgctxt "#40007"
-msgid "Show 'Music' item"
-msgstr "Afficher l'élément 'Musique'"
+msgid "Are you sure you want to reset display of all menu items back to default ?"
+msgstr "Êtes-vous sûr de que vouloir réinitialiser l'affichage par défaut de tous les éléments du menu ?"
 
-#: /xml/SkinSettings.xml
-msgctxt "#40008"
-msgid "Show 'Music videos' item"
-msgstr "Afficher l'élément 'Clips Musicaux'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40009"
-msgid "Show 'TV' item"
-msgstr "Afficher l'élément 'TV'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40010"
-msgid "Show 'Radio' item"
-msgstr "Afficher l'élément 'Radio'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40011"
-msgid "Show 'Add-ons' item"
-msgstr "Afficher l'élément 'Extensions'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40012"
-msgid "Show 'Pictures' item"
-msgstr "Afficher l'élément 'Images'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40013"
-msgid "Show 'Videos' item"
-msgstr "Afficher l'élément 'Vidéos'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40014"
-msgid "Show 'Games' item"
-msgstr "Afficher l'élément 'Jeux'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40015"
-msgid "Show 'Favourites' item"
-msgstr "Afficher l'élément 'Favoris'"
-
-#: /xml/SkinSettings.xml
-msgctxt "#40016"
-msgid "Show 'Weather' item"
-msgstr "Afficher l'élément 'Météo'"
+#: Empty strings 40008 to 40016
 
 #: /xml/SkinSettings.xml
 msgctxt "#40017"
