--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -746,7 +746,17 @@ msgctxt "#40008"
 msgid "Changes of version"
 msgstr "Changements de la version"
 
-#: Empty strings 40009 to 40016
+#: /xml/Variables.xml
+msgctxt "#40009"
+msgid "Update video library"
+msgstr "Mettre à jour la bibliothèque vidéo"
+
+#: /xml/Variables.xml
+msgctxt "#40010"
+msgid "Update music library"
+msgstr "Mettre à jour la bibliothèque musique"
+
+#: Empty strings 40011 to 40016
 
 #: /xml/SkinSettings.xml
 msgctxt "#40017"
