--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,5 +1,6 @@
 1.7.8 :
 • Add Videolyrics (credits to manfeed)
+• Change widget name on Hub window for pictures
 
 1.7.7 :
 • Fix missing justify plots
