• Add icon when item is resumable • Fix esthetic appearance

--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -761,7 +761,22 @@ msgctxt "#40011"
 msgid "Show smaller icons for 'Categories' widgets"
 msgstr "Afficher des icônes plus petites pour les widgets 'Catégories'"
 
-#: Empty strings 40012 to 40016
+#: /xml/Home.xml
+msgctxt "#40012"
+msgid "Next episodes to watch"
+msgstr "Prochains épisodes à regarder"
+
+#: /xml/Variables.xml
+msgctxt "#40013"
+msgid "Stop scanning video library"
+msgstr "Arrêter le balayage de la bibliothèque vidéo"
+
+#: /xml/Variables.xml
+msgctxt "#40014"
+msgid "Stop scanning music library"
+msgstr "Arrêter le balayage de la bibliothèque musique"
+
+#: Empty strings 40015 to 40016
 
 #: /xml/SkinSettings.xml
 msgctxt "#40017"
