--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,7 @@
+[B]2.0.4[/B]
+• Add icon when item is resumable
+• Fix esthetic appearance
+
 [B]2.0.3[/B]
 • Add Videolyrics (credits to manfeed)
 • Add new 'Next episodes to see' widget
