--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,6 @@
+1.7.9 :
+• Fix missing lyrics fonts for Arial
+
 1.7.8 :
 • Add Videolyrics (credits to manfeed)
 • Change widget name on Hub window for pictures
