• Fix Youtube call

--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,7 @@
+[B]2.0.5[/B]
+• Fix Youtube call
+• Minnor fixes
+
 [B]2.0.4[/B]
 • Add new 'InfoWall (thumbnails)' view
 • Add new 'Wall (thumbnails)' view
