--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,4 +1,6 @@
 [B]2.0.5[/B]
+• Add info button on video OSD
+• Add language and subtitles language on fullscreen info
 • Replace rating badge
 • Fix Youtube call
 • Minnor fixes
