• Fix banner on music visualisation when next tracks are not available

--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.0.6[/B]
+• Fix banner on music visualisation when next tracks are not available
+
 [B]2.0.5[/B]
 • Add info button on video OSD
 • Add language and subtitles language on fullscreen info
