--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1330,3 +1330,8 @@ msgstr ""
 msgctxt "#40125"
 msgid "Power menu style"
 msgstr ""
+
+#: /xml/Custom_1124_SettingsTVShowsWidgets.xml
+msgctxt "#40126"
+msgid "Hide thumbs episodes to avoid spoilers"
+msgstr ""
