--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -1330,3 +1330,8 @@ msgstr "Opacité des barres du haut et du bas"
 msgctxt "#40125"
 msgid "Power menu style"
 msgstr "Style du menu d'alimentation"
+
+#: /xml/Custom_1124_SettingsTVShowsWidgets.xml
+msgctxt "#40126"
+msgid "Hide thumbs episodes to avoid spoilers"
+msgstr "Masquer les vignettes des épisodes pour éviter les spoilers"
