--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -4,6 +4,7 @@
 • Fix banner on music visualisation when next tracks are not available
 • Fix missing clearlogos with moviesets widget
 • Fix in musicvideo views
+• Fix label with moviesets thumbnails
 • Drop support for using hyphen as none value
 • Minnor fixes
 
