• Enable landscape views for seasons

--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -5,6 +5,7 @@
 • Fix missing clearlogos with moviesets widget
 • Fix in musicvideo views
 • Fix label with moviesets thumbnails
+• Enable landscape views for seasons
 • Drop support for using hyphen as none value
 • Minnor fixes
 
