--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.1[/B]
+• Minnor fixes
+
 [B]2.1.0[/B]
 • Add support for Skin Shortcuts addon to customize home menu and widgets
 • Add support for thumbnails with NextUp Service addon
