--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.4[/B]
+• Fix context menu for CU LRC Lyrics addon
+
 [B]2.1.3[/B]
 • Fix centered posters on some views
 • Fix missing posters flag for moviesets with Wall (Thumbnails) view
