--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -566,7 +566,12 @@ msgctxt "#31131"
 msgid "Add-ons settings"
 msgstr "Paramètres des extensions"
 
-#: Empty string 31132 to 31133
+#: /xml/script-skinshortcuts.xml
+msgctxt "#31132"
+msgid "Hide submenus widget"
+msgstr "Masquer le widget des sous-menus"
+
+#: Empty string 31133
 
 #: /xml/DialogSeekBar.xml
 msgctxt "#31134"
