--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -571,7 +571,10 @@ msgctxt "#31132"
 msgid "Hide submenus widget"
 msgstr "Masquer le widget des sous-menus"
 
-#: Empty string 31133
+#: /xml/SkinSettings.xml
+msgctxt "#31133"
+msgid "Show banners on episodes/thumbs widgets"
+msgstr "Afficher les bannières sur les widgets des épisodes/vignettes"
 
 #: /xml/DialogSeekBar.xml
 msgctxt "#31134"
