--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.5[/B]
+• Minor fixes
+
 [B]2.1.4[/B]
 • Add possibility to configure submenus for Personnal Widget
 • Add possibility to show banners for episodes/thumbs widgets
