--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -794,7 +794,7 @@ msgstr "Mur avec informations (vignettes)"
 
 #: /xml/SkinSettings.xml
 msgctxt "#40018"
-msgid "Hide items of widget"
+msgid "Hide watched items"
 msgstr "Masquer les éléments vus du widget"
 
 #: /xml/SkinSettings.xml
