• Add library info on settings widget

--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -676,7 +676,10 @@ msgctxt "#31156"
 msgid "Choose background pattern"
 msgstr "Type du modèle d'arrière-plan"
 
-#: Empty String 31157
+#: /xml/SettingsSystemInfo.xml
+msgctxt "#31157"
+msgid "Library info"
+msgstr "Informations de la bibliothèque"
 
 #: /xml/SkinSettings.xml
 msgctxt "#31158"
