--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -676,7 +676,10 @@ msgctxt "#31156"
 msgid "Choose background pattern"
 msgstr ""
 
-#: Empty String 31157
+#: /xml/SettingsSystemInfo.xml
+msgctxt "#31157"
+msgid "Library info"
+msgstr ""
 
 #: /xml/SkinSettings.xml
 msgctxt "#31158"
