--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,9 @@
+[B]2.1.6[/B]
+• Add new 'Gallery' view
+• Add new 'Mosaic' view for pictures
+• Add clearlogos list for 'Shift' view
+• Minor fixes
+
 [B]2.1.5[/B]
 • Add library info on settings widget
 • Add ratings/user ratings in list views
