--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -1450,3 +1450,58 @@ msgstr "Mosaïque (verticale)"
 msgctxt "#40147"
 msgid "View"
 msgstr "Vue"
+
+#: /xml/Variables.xml
+msgctxt "#40148"
+msgid "None"
+msgstr "Aucune"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40149"
+msgid "Enable forced views"
+msgstr "Activer les vues forcées"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40150"
+msgid "Forced view for movies"
+msgstr "Vue forcée pour les films"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40151"
+msgid "Forced view for movie sets"
+msgstr "Vue forcée pour les sagas de films"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40152"
+msgid "Forced view for movies inside set"
+msgstr "Vue forcée pour les films contenus dans une saga"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40153"
+msgid "Forced view for tv shows"
+msgstr "Vue forcée pour les séries TV"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40154"
+msgid "Forced view for seasons"
+msgstr "Vue forcée pour les saisons"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40155"
+msgid "Forced view for episodes"
+msgstr "Vue forcée pour les épisodes"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40156"
+msgid "Forced view for artists"
+msgstr "Vue forcée pour les artistes"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40157"
+msgid "Forced view for albums"
+msgstr "Vue forcée pour les albums"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40158"
+msgid "Forced view for music videos"
+msgstr "Vue forcée pour les clips musicaux"
