--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -2,6 +2,7 @@
 • Add possibility to force views in library
 • Fix missing view for music
 • Fix esthetic appearance
+• Fix context menu position
 • Minor fixes
 
 [B]2.1.9[/B]
