--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -743,8 +743,8 @@ msgstr "Galerie"
 
 #: /xml/SkinSettings.xml
 msgctxt "#40006"
-msgid "Reset main menu settings"
-msgstr "Réinitialiser les paramètres du menu principal"
+msgid "Reset main menu and power menu settings"
+msgstr "Réinitialiser les paramètres du menu principal et du menu d'alimentation"
 
 #: /xml/SkinSettings.xml
 msgctxt "#40007"
@@ -1505,3 +1505,13 @@ msgstr "Vue forcée pour les albums"
 msgctxt "#40158"
 msgid "Forced view for music videos"
 msgstr "Vue forcée pour les clips musicaux"
+
+#: /xml/SkinSettings.xml
+msgctxt "#40159"
+msgid "Customize power menu"
+msgstr "Personnaliser le menu d'alimentation"
+
+#: /xml/Variables.xml
+msgctxt "#40160"
+msgid "Power menu-related settings: Configure it to your likings."
+msgstr "Paramètres relatifs au menu d'alimentation. Configurez le comme désiré."
