--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1515,3 +1515,13 @@ msgstr ""
 msgctxt "#40160"
 msgid "Power menu-related settings: Configure it to your likings."
 msgstr ""
+
+#: /xml/Home.xml
+msgctxt "#40161"
+msgid "All channels"
+msgstr ""
+
+#: /xml/Home.xml
+msgctxt "#40162"
+msgid "All radios"
+msgstr ""
