• Add support for Videolyrics v3 with possibility to fix lyrics colors by song (thanks to manfeed)

--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1525,3 +1525,8 @@ msgstr ""
 msgctxt "#40162"
 msgid "All radios"
 msgstr ""
+
+#: /xml/Custom_1105_MusicOSDSettings.xml
+msgctxt "#40163"
+msgid "Fixed lyrics colors"
+msgstr ""
