--- a/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.modv2/language/resource.language.fr_fr/strings.po
@@ -1525,3 +1525,8 @@ msgstr "Toutes les chaînes TV"
 msgctxt "#40162"
 msgid "All radios"
 msgstr "Toutes les radios"
+
+#: /xml/Custom_1105_MusicOSDSettings.xml
+msgctxt "#40163"
+msgid "Fixed lyrics colors"
+msgstr "Couleurs des paroles fixes"
