--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,4 +1,5 @@
 [B]2.2.2[/B]
+• Add support for Videolyrics v3 with possibility to fix lyrics colors by song (thanks to manfeed)
 • Add support for Kodi Log Uploader addon
 • Minor fixes
 
