• Add possibility to greyed out watched items in library and on widgets

--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1530,3 +1530,8 @@ msgstr ""
 msgctxt "#40163"
 msgid "Fixed lyrics colors"
 msgstr ""
+
+#: /xml/SkinSettings.xml
+msgctxt "#40164"
+msgid "Greyed out watched items"
+msgstr ""
