--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,6 +1,6 @@
 [B]2.2.4[/B]
 • Add possibility to show CDArt on widgets and on library
-• Add possibility to install addons zip files directly from home menu
+• Add possibility to install addons zip files directly from home submenu
 • Minor fixes
 
 [B]2.2.3[/B]
