--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.2.5[/B]
+• Fix personalized widget 5
+
 [B]2.2.4[/B]
 • Add possibility to show CDArt on widgets and on library
 • Add possibility to install addons zip files directly from home submenu
