--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1316,7 +1316,10 @@ msgctxt "#40120"
 msgid "TV shows next aired"
 msgstr ""
 
-#: empty string 40121
+#: /extras/script.skinshortcuts/overrides.xml
+msgctxt "#40121"
+msgid "Personalized widget 5"
+msgstr ""
 
 #: /xml/Home.xml
 msgctxt "#40122"
